update_tabu_list y un primer test, hecho

--- a/BT_AgenteViajero.ipynb
+++ b/BT_AgenteViajero.ipynb
@@ -74,10 +74,10 @@
       "source": [
         "# La primera lınea tendra el numero de ciudades N.\n",
         "#N = int(input(\"Número de ciudades: \"))\n",
-        "N = 10\n",
+        "\n",
         "#\"La segunda lınea tendrá el numero maximo de iteraciones Imax del\n",
         "#Imax = int(input(\"Número maximo de iteraciones: \"))\n",
-        "Imax = 100\n",
+        "\n",
         "\"\"\"\n",
         "10\n",
         "100\n",
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IadkfdPVhM6s",
-        "outputId": "97f1157b-ab78-450e-e94d-92c943871fd0"
+        "outputId": "d81f8034-8b4e-4617-fe7a-9911c35b88c0"
       },
       "source": [
         "# La primera lınea tendra el numero de ciudades N.\n",
@@ -124,7 +124,7 @@
         "all_cities = {'0': [49, 30, 53, 72, 19, 76, 87, 45, 48], '1': [19, 38, 32, 31, 75, 69, 61, 25], '2': [41, 98, 56, 6, 6, 45, 53], '3': [52, 29, 46, 90, 23, 98], '4': [63, 90, 69, 50, 82], '5': [60, 88, 41, 95], '6': [61, 92, 10], '7': [82, 73], '8': [5]}\n",
         "print(all_cities)"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,14 +154,9 @@
         "  tmp = [\"{0}\".format(i) for i in range(1,N-1)]\n",
         "  shuffle(tmp)\n",
         "  X0 = X0+tmp+X0\n",
-        "  return (X0)\n",
-        "\n",
-        "  #print(next_city, position_next_city, order_visit)\n",
-        "  # Se parte de la ciudad n0, se revisa el costo de ir a las N-1 ciudades\n",
-        "  # restantes y se elige la de menor costo. Posteriormente, se repite el proceso.\n",
-        "  # Actualizar mejor solución: X* <- X0"
+        "  return (X0)"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -258,6 +253,7 @@
         "  \"\"\"\n",
         "  distance = 0\n",
         "  actual_city = x[0] # ciudad actual\n",
+        "  #print(actual_city)\n",
         "  for i in range(len(all_cities.keys())):\n",
         "    try:\n",
         "      next_city = x[i+1] # ciudad siguiente\n",
@@ -276,7 +272,7 @@
         "  \n",
         "  return (distance)\n"
       ],
-      "execution_count": 4,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -291,48 +287,45 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xZkLvxMRKwEL",
-        "outputId": "0f92e172-97b3-4a49-cd0d-67de2526dbfc"
+        "id": "xZkLvxMRKwEL"
       },
       "source": [
         "# test for f(x)\n",
-        "x = ['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
-        "print(f(x, all_cities))\n",
+        "#x = ['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
+        "#print(f(x, all_cities))\n",
         "# it works!"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "471\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 31,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "z-jNdhOoQWyp"
+        "id": "0sLiMe59w0b3"
       },
       "source": [
-        "# [Función] Lista Tabú"
+        "# [Función] Actualizar Lista Tabú "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qht-tuX6QcYt"
+        "id": "EYhGW9glwz_5"
       },
       "source": [
-        "def tabu_list: \n",
-        "  pass"
+        "def update_tabu_list(tabu_list, city_used): \n",
+        "  \"\"\"function to update tabu list\n",
+        "  tabu_list = dict with city: tabu time\n",
+        "  city_used = str city used to generate a neighborhood\n",
+        "  return: dict with update tabu list\n",
+        "  \"\"\"\n",
+        "  tabu_list[city_used] -= 1\n",
+        "  if tabu_list[city_used] == 0:\n",
+        "    del tabu_list[city_used]\n",
+        "  \n",
+        "  return (tabu_list)"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -357,12 +350,13 @@
         "def get_neighborhood(current_solution):\n",
         "  \"\"\"function to get more possibles solutions and maybe better\n",
         "  current_solution = array with the current order of the cities\n",
-        "  return: array of arrays with N-2 pissibles solutions\n",
+        "  return: array of arrays with N-2 pissibles solutions & the city\n",
         "  \"\"\"\n",
         "  from random import randint\n",
         "  tmp_solution = current_solution.copy() # Para no modificar nuestra solución actual\n",
         "  neighborhood = [] # arreglo que contendra las N-2 soluciones\n",
         "  index_city = randint(1, 8) # 0 corresponde a la ciudad de origen, esa no cambia y 9 igual\n",
+        "  city = current_solution[index_city] # ciudad que se usará para generar el vecindario\n",
         "  #print(index_city)\n",
         "  for i in range(1, len(current_solution)-1): #Ignoramos los extremos ya que corresponden a la ciudad de origen\n",
         "    tmp = tmp_solution\n",
@@ -375,48 +369,53 @@
         "    #almacenamos la solución generada a partir del intercambio de posiciones\n",
         "    neighborhood.append(tmp)\n",
         "\n",
-        "  return (neighborhood)"
+        "  return (neighborhood, city)"
       ],
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QPw9DEWmMdny",
-        "outputId": "095d21c5-1c95-462e-db8f-fb316589bf17"
+        "id": "QPw9DEWmMdny"
       },
       "source": [
         "# test for getNeighborhood\n",
-        "x = ['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
-        "vecindario = get_neighborhood(x)\n",
-        "for i in vecindario:\n",
-        "  print(i)\n",
-        "print(len(vecindario))\n",
+        "#x = ['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
+        "#vecindario, city_used = get_neighborhood(x)\n",
+        "#for i in vecindario:\n",
+        "  #print(i)\n",
+        "#print(len(vecindario), city_used)\n",
         "# It works!"
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "7\n",
-            "['0', '1', '2', '3', '7', '8', '5', '6', '4', '0']\n",
-            "['0', '6', '1', '3', '7', '8', '5', '2', '4', '0']\n",
-            "['0', '6', '2', '1', '7', '8', '5', '3', '4', '0']\n",
-            "['0', '6', '2', '3', '1', '8', '5', '7', '4', '0']\n",
-            "['0', '6', '2', '3', '7', '1', '5', '8', '4', '0']\n",
-            "['0', '6', '2', '3', '7', '8', '1', '5', '4', '0']\n",
-            "['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
-            "['0', '6', '2', '3', '7', '8', '5', '4', '1', '0']\n",
-            "8\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ILBGNBypyZav"
+      },
+      "source": [
+        "# [Función] Vecindario reducido\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pgHO-bDAyfbg"
+      },
+      "source": [
+        "def get_reduce_neighborhood(city_used, tabu_list):\n",
+        "  \"\"\"function to reduce my neighborhood of possible solutions\n",
+        "  city_used = str the city used to generate the neighborhood \n",
+        "  tabu_list = dict with city: tabu time\n",
+        "  return: array with the new neighborhood\n",
+        "  \"\"\"\n",
+        "  pass"
+      ],
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -438,78 +437,77 @@
         "  Imax = int number of iterations\n",
         "  N = int number of cities\n",
         "  all_cities = dict with city:distance from city to other cities\n",
+        "  return: (array with the best way, int with the whole distance)\n",
         "  \"\"\"\n",
+        "  from math import floor\n",
         "  # Generar solución inicial X0.\n",
         "  # El viajero siempre parte de n0\n",
         "  # De acuerdo a las consideraciones: La solucion inicial se genera utilizando un algoritmo voraz.\n",
         "  X0 = generate_solution(N)\n",
-        "  print(X0)\n",
+        "  print(f\"Solución inicial: {X0}, {f(X0, all_cities)}\")\n",
         "  \n",
         "  # Colocar el contador de iteraciones en 0: K <- 0\n",
         "  k = 0\n",
         "  X = X0\n",
         "  # Inicializar la lista tabú como un conjunto vacio: T(X, K) = {}\n",
-        "  tabu_list = {}\n",
+        "  tabu_time = floor(N/2)\n",
+        "  tabu_list = {} # {\"0\":2} = {city: tabu_time}\n",
+        "  \n",
         "  while k <= Imax:\n",
         "    k += 1\n",
         "    # Determinar el vecindario N(x)\n",
-        "\n",
+        "    possible_solutions, city_used = get_neighborhood(X0)\n",
+        "    tabu_list[city_used] = tabu_time # Añadimos a la lista tabu, la ciudad usada para generar el vecindario\n",
         "    ## Determinar el conjunto de aspirantes A(X,K)\n",
-        "    ## Determinar el vecindario reducido: N*(X) = {N(X) - T(X, K)} u A(X, K)\n",
+        "\n",
+        "    ## Es aquí donde uso el concepto de la lista tabú, sino no tiene sentido para que la cree\n",
+        "    # debo corroborar que la ciudad usada para generar neighborhood no este en la lista tabú\n",
+        "    # Determinar el vecindario reducido: N*(X) = {N(X) - T(X, K)} u A(X, K) \n",
+        "\n",
         "    # Escoger la mejor solución X entre las soluciones que estan en N*(X,K)\n",
-        "\n",
-        "    #if f(X) < f(X_start): \n",
-        "      #X_start = X\n",
+        "    for ps in possible_solutions:\n",
+        "      if f(ps, all_cities) < f(X, all_cities): #if f(x) < f(x*) \n",
+        "        X = ps#X_start = X\n",
         "    \n",
-        "    #actualizar la lista tabúú L(X,K)\n",
+        "    #actualizar la lista tabú L(X,K)\n",
+        "    tabu_list = update_tabu_list(tabu_list, city_used)\n",
         "\n",
+        "  return (X, f(X, all_cities))\n",
         "\n",
         "\n",
         " \n"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 306
+          "base_uri": "https://localhost:8080/"
         },
         "id": "tzt3etDrAcvP",
-        "outputId": "f6f0bca9-642b-478a-90ab-df1ed886536f"
+        "outputId": "aeab929c-df9d-4858-bd7d-86b0273d95e9"
       },
       "source": [
-        "salesMan(Imax, N, all_cities)"
+        "print(tabu_search(Imax, N, all_cities))"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n"
+            "Solución inicial: ['0', '7', '5', '8', '3', '4', '6', '2', '1', '0'], 455\n",
+            "(['0', '1', '5', '8', '3', '4', '6', '2', '7', '0'], 385)\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-5ba1ad4dc751>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msalesMan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_cities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-17-b511474483d1>\u001b[0m in \u001b[0;36msalesMan\u001b[0;34m(Imax, N, all_cities)\u001b[0m\n\u001b[1;32m     16\u001b[0m   \u001b[0mtabu_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mImax\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mk\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Determinar el vecindario N(x)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;31m## Determinar el conjunto de aspirantes A(X,K)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4-GGjDxsB7MW"
+        "id": "3BNXqtO23rXu"
       },
       "source": [
         ""
