80% solo falta generación voraz

--- a/BT_AgenteViajero.ipynb
+++ b/BT_AgenteViajero.ipynb
@@ -6,7 +6,8 @@
       "name": "BT_AgenteViajero.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "epx1l9bz6uZZ"
+        "epx1l9bz6uZZ",
+        "ILBGNBypyZav"
       ]
     },
     "kernelspec": {
@@ -112,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IadkfdPVhM6s",
-        "outputId": "d81f8034-8b4e-4617-fe7a-9911c35b88c0"
+        "outputId": "e3e7a561-6b73-49cc-db66-d18862c99f33"
       },
       "source": [
         "# La primera lınea tendra el numero de ciudades N.\n",
@@ -124,7 +125,7 @@
         "all_cities = {'0': [49, 30, 53, 72, 19, 76, 87, 45, 48], '1': [19, 38, 32, 31, 75, 69, 61, 25], '2': [41, 98, 56, 6, 6, 45, 53], '3': [52, 29, 46, 90, 23, 98], '4': [63, 90, 69, 50, 82], '5': [60, 88, 41, 95], '6': [61, 92, 10], '7': [82, 73], '8': [5]}\n",
         "print(all_cities)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +157,7 @@
         "  X0 = X0+tmp+X0\n",
         "  return (X0)"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -272,7 +273,7 @@
         "  \n",
         "  return (distance)\n"
       ],
-      "execution_count": 35,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -295,7 +296,7 @@
         "#print(f(x, all_cities))\n",
         "# it works!"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,19 +314,56 @@
         "id": "EYhGW9glwz_5"
       },
       "source": [
-        "def update_tabu_list(tabu_list, city_used): \n",
+        "def update_tabu_list(tabu_list): \n",
         "  \"\"\"function to update tabu list\n",
         "  tabu_list = dict with city: tabu time\n",
-        "  city_used = str city used to generate a neighborhood\n",
         "  return: dict with update tabu list\n",
         "  \"\"\"\n",
-        "  tabu_list[city_used] -= 1\n",
-        "  if tabu_list[city_used] == 0:\n",
-        "    del tabu_list[city_used]\n",
-        "  \n",
+        "  for i in range(len(tabu_list)): \n",
+        "    try:\n",
+        "      #print(i[1])\n",
+        "      tabu_list[i][1] -= 1\n",
+        "      if tabu_list[i][1] == 0:\n",
+        "        #print(\"ENTRE! {0}\".format(tabu_list[i]))\n",
+        "        tabu_list.pop(i)\n",
+        "        #print(\"new tabu: {0}\".format(tabu_list))\n",
+        "    except:\n",
+        "      pass\n",
         "  return (tabu_list)"
       ],
-      "execution_count": 28,
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vjbjt4j-r2Z3"
+      },
+      "source": [
+        "# [Función] Revisar lista tabú"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rglZqPfgsrcY"
+      },
+      "source": [
+        "def check_tabu_list(city_used, tabu_list):\n",
+        "  \"\"\"function to know if an element is in tabu_list\n",
+        "  city_used = str city to check if is in tabu_list\n",
+        "  tabu_list = dict with city: tabu time\n",
+        "  return: True or False\n",
+        "  \"\"\"\n",
+        "  status = False\n",
+        "  for element in tabu_list:\n",
+        "    if (city_used in element) == True:\n",
+        "      status = True\n",
+        "\n",
+        "\n",
+        "  return (status)"
+      ],
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -371,7 +409,7 @@
         "\n",
         "  return (neighborhood, city)"
       ],
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -388,7 +426,7 @@
         "#print(len(vecindario), city_used)\n",
         "# It works!"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +452,7 @@
         "  \"\"\"\n",
         "  pass"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,33 +489,39 @@
         "  X = X0\n",
         "  # Inicializar la lista tabú como un conjunto vacio: T(X, K) = {}\n",
         "  tabu_time = floor(N/2)\n",
-        "  tabu_list = {} # {\"0\":2} = {city: tabu_time}\n",
+        "  tabu_list = [] # [\"0\",2] = [city, tabu_time]\n",
         "  \n",
         "  while k <= Imax:\n",
         "    k += 1\n",
         "    # Determinar el vecindario N(x)\n",
-        "    possible_solutions, city_used = get_neighborhood(X0)\n",
-        "    tabu_list[city_used] = tabu_time # Añadimos a la lista tabu, la ciudad usada para generar el vecindario\n",
-        "    ## Determinar el conjunto de aspirantes A(X,K)\n",
+        "    possible_solutions, city_used = get_neighborhood(X0) \n",
         "\n",
-        "    ## Es aquí donde uso el concepto de la lista tabú, sino no tiene sentido para que la cree\n",
-        "    # debo corroborar que la ciudad usada para generar neighborhood no este en la lista tabú\n",
-        "    # Determinar el vecindario reducido: N*(X) = {N(X) - T(X, K)} u A(X, K) \n",
+        "    # Revisamos que la ciudad no este en la lista tabu\n",
+        "    status = check_tabu_list(city_used, tabu_list)\n",
+        "    if status == False: \n",
+        "      tabu_list.append([city_used, tabu_time]) # Añadimos a la lista tabu, la ciudad usada para generar el vecindario\n",
+        "    elif status == True: \n",
+        "      possible_solutions = [] # Para evitarel for que revisa las soluciones\n",
+        "    \n",
+        "    \n",
+        "    ## Determinar el conjunto de aspirantes A(X,K)\n",
+        "    ## Determinar el vecindario reducido: N*(X) = {N(X) - T(X, K)} u A(X, K) \n",
         "\n",
         "    # Escoger la mejor solución X entre las soluciones que estan en N*(X,K)\n",
         "    for ps in possible_solutions:\n",
         "      if f(ps, all_cities) < f(X, all_cities): #if f(x) < f(x*) \n",
-        "        X = ps#X_start = X\n",
+        "          X = p s#X_start = X\n",
         "    \n",
         "    #actualizar la lista tabú L(X,K)\n",
-        "    tabu_list = update_tabu_list(tabu_list, city_used)\n",
+        "    #print(tabu_list)\n",
+        "    tabu_list = update_tabu_list(tabu_list)\n",
         "\n",
         "  return (X, f(X, all_cities))\n",
         "\n",
         "\n",
         " \n"
       ],
-      "execution_count": 40,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -487,18 +531,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tzt3etDrAcvP",
-        "outputId": "aeab929c-df9d-4858-bd7d-86b0273d95e9"
+        "outputId": "4f603db9-36f8-4833-a963-d224b82632b1"
       },
       "source": [
-        "print(tabu_search(Imax, N, all_cities))"
+        "print(f\"Solución final: {tabu_search(Imax, N, all_cities)}\")"
       ],
-      "execution_count": 42,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Solución inicial: ['0', '7', '5', '8', '3', '4', '6', '2', '1', '0'], 455\n",
-            "(['0', '1', '5', '8', '3', '4', '6', '2', '7', '0'], 385)\n"
+            "Solución inicial: ['0', '1', '6', '8', '2', '5', '4', '7', '3', '0'], 592\n",
+            "Solución final: (['0', '1', '6', '7', '2', '5', '4', '8', '3', '0'], 436)\n"
           ],
           "name": "stdout"
         }
@@ -512,7 +556,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     }
   ]
