--- a/BT_AgenteViajero.ipynb
+++ b/BT_AgenteViajero.ipynb
@@ -6,6 +6,7 @@
       "name": "BT_AgenteViajero.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "QYfC60IL8zSX",
         "epx1l9bz6uZZ"
       ]
     },
@@ -78,7 +79,7 @@
         "from math import floor\n",
         "import numpy as np"
       ],
-      "execution_count": 270,
+      "execution_count": 348,
       "outputs": []
     },
     {
@@ -112,7 +113,7 @@
         "  X0 = X0+tmp+X0\n",
         "  return (X0)"
       ],
-      "execution_count": 271,
+      "execution_count": 349,
       "outputs": []
     },
     {
@@ -153,7 +154,7 @@
         "  return (min_value, city_key) \n",
         "  "
       ],
-      "execution_count": 272,
+      "execution_count": 350,
       "outputs": []
     },
     {
@@ -207,7 +208,7 @@
         "  my_way.append('0')\n",
         "  return(my_way)"
       ],
-      "execution_count": 273,
+      "execution_count": 351,
       "outputs": []
     },
     {
@@ -221,7 +222,7 @@
         "# it works!\n",
         "# ['0', '5', '3', '8', '9', '6', '2', '7', '1', '4', '0'], 271\n"
       ],
-      "execution_count": 274,
+      "execution_count": 352,
       "outputs": []
     },
     {
@@ -272,7 +273,7 @@
         "  \n",
         "  return (distance)\n"
       ],
-      "execution_count": 275,
+      "execution_count": 353,
       "outputs": []
     },
     {
@@ -299,7 +300,7 @@
         "#print(f(x, all_cities))\n",
         "# it works!"
       ],
-      "execution_count": 276,
+      "execution_count": 354,
       "outputs": []
     },
     {
@@ -334,7 +335,7 @@
         "      pass\n",
         "  return (tabu_list)"
       ],
-      "execution_count": 277,
+      "execution_count": 355,
       "outputs": []
     },
     {
@@ -366,7 +367,7 @@
         "\n",
         "  return (status)"
       ],
-      "execution_count": 278,
+      "execution_count": 356,
       "outputs": []
     },
     {
@@ -391,7 +392,7 @@
         "def get_neighborhood(current_solution):\n",
         "  \"\"\"function to get more possibles solutions and maybe better\n",
         "  current_solution = array with the current order of the cities\n",
-        "  return: array of arrays with N-2 pissibles solutions & the city\n",
+        "  return: array of arrays with N-2 pissibles solutions & the city used\n",
         "  \"\"\"\n",
         "  #from random import randint\n",
         "  tmp_solution = current_solution.copy() # Para no modificar nuestra solución actual\n",
@@ -414,7 +415,7 @@
         "\n",
         "  return (neighborhood, city)"
       ],
-      "execution_count": 279,
+      "execution_count": 398,
       "outputs": []
     },
     {
@@ -425,13 +426,13 @@
       "source": [
         "# test for getNeighborhood\n",
         "#x = ['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
-        "#vecindario, city_used = get_neighborhood(x)\n",
+        "#ecindario, city_used = get_neighborhood(x)\n",
         "#for i in vecindario:\n",
         "  #print(i)\n",
         "#print(len(vecindario), city_used)\n",
         "# It works!"
       ],
-      "execution_count": 280,
+      "execution_count": 404,
       "outputs": []
     },
     {
@@ -460,7 +461,7 @@
         "  return(np.where(matrix,matrix,matrix.T))\n",
         "#dis_mat = np.where(matrix,matrix,matrix.T)"
       ],
-      "execution_count": 281,
+      "execution_count": 359,
       "outputs": []
     },
     {
@@ -470,10 +471,20 @@
       },
       "source": [
         "# test for generate_adjacency_matrix\n",
-        "#print(generate_adjacency_matrix(distances))\n",
-        "# it works!"
+        "#JUan = [[49, 30, 53, 72, 19, 76, 87, 45, 48],\n",
+        "#[19, 38, 32, 31, 75, 69, 61, 25],\n",
+        "#[41, 98, 56, 6, 6, 45, 53],\n",
+        "#[52, 29, 46, 90, 23, 98],\n",
+        "#[63, 90, 69, 50, 82],\n",
+        "#[60, 88, 41, 95],\n",
+        "#[61, 92, 10],\n",
+        "#[82, 73],\n",
+        "#[5]]\n",
+        "#adj = (generate_adjacency_matrix(JUan))\n",
+        "# it works!\n",
+        "#adj"
       ],
-      "execution_count": 282,
+      "execution_count": 360,
       "outputs": []
     },
     {
@@ -492,8 +503,8 @@
       },
       "source": [
         "def get_minimo_adj(adj_matrix, my_way): \n",
-        "  \"\"\"\n",
-        "  adj_matrix = array with the distances of the cities like [10000    49    30    53    72    19    76    87    45    48]\n",
+        "  \"\"\"function to to get the minimun distance between A and B\n",
+        "  adj_matrix = array with the distances of the cities like [10000 49 30 53 72 19 76 87 45 48]\n",
         "  my_way = array with the cities until now\n",
         "  return: int str the distance and the city\n",
         "  \"\"\"\n",
@@ -501,7 +512,7 @@
         "  city_key = ''\n",
         "  tmp = list(adj_matrix) # convertimos a lista para poder usar .index\n",
         "  #print(\"Empieza\")\n",
-        "  #print(f\"my_Way: {my_way} y adj_matrix: {adj_matrix}\")\n",
+        "  #print(f\"my_Way: {my_way}\")#\" y adj_matrix: {adj_matrix}\")\n",
         "  key = 0 # Correspondera al indice y a su vez a la ciudad\n",
         "  for value in adj_matrix:\n",
         "    #value = i\n",
@@ -510,9 +521,10 @@
         "    # por eso cambie a la declaracióón de key = 0\n",
         "    #key = tmp.index(value) # Obtenemos el indice del valor actual que corresponderáá a la ciudad\n",
         "    #print(\"value\", value)\n",
-        "    #print(f\"value: {value}, min_value: {min_value}, ciudad: {key}\")\n",
+        "    #(f\"value: {value}, min_value: {min_value}, ciudad: {key}\")\n",
         "    #key = arr_index_adj(adj_matrix, value)\n",
         "    #if (adj_matrix[key] == value) == True:\n",
+        "    # <= Para generar el minimo local desde el inicio \n",
         "    if (value < min_value) and (str(key) not in my_way): # corroboramos que tenemos la ciudad de menor peso y que a sido visitada \n",
         "      #print(f\"ciudad: {key} valor: {value}\")\n",
         "      min_value = value\n",
@@ -525,7 +537,7 @@
         "  #return (min_value, city_key)\n",
         "  return (adj_matrix[city_key], city_key)"
       ],
-      "execution_count": 283,
+      "execution_count": 361,
       "outputs": []
     },
     {
@@ -544,7 +556,7 @@
       },
       "source": [
         "def generate_greedy_solution_adj_matrix(adj_mat):\n",
-        "  \"\"\"\n",
+        "  \"\"\"function to generate a greedy first solution \n",
         "  adj_mat = array with the adjacency matrix\n",
         "  return: array with the best way\n",
         "  \"\"\"\n",
@@ -570,32 +582,20 @@
         "  return(my_way)\n",
         "    "
       ],
-      "execution_count": 284,
+      "execution_count": 362,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HulsSs1kdqja",
-        "outputId": "363c498c-ceaf-4d78-84bb-8ff84d4d16fe"
+        "id": "HulsSs1kdqja"
       },
       "source": [
-        "way = generate_greedy_solution_adj_matrix(adjacency_matrix)\n",
-        "print(way, f(way, my_cities))\n"
+        "#way = generate_greedy_solution_adj_matrix(adjacency_matrix)\n",
+        "#print(way, f(way, my_cities))"
       ],
-      "execution_count": 285,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['0', '5', '3', '8', '9', '6', '2', '7', '1', '4', '0'] 271\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 363,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -645,7 +645,7 @@
         "  #print(f\"diccionario de ciudades: {my_cities}\\narreglo de arreglos: {distances}\")\n",
         "  return (my_cities, adj_distances, N, Imax)"
       ],
-      "execution_count": 286,
+      "execution_count": 364,
       "outputs": []
     },
     {
@@ -679,15 +679,28 @@
         "    key = f\"{i}\"\n",
         "    all_cities[key] = my_cities # almacenamos la lista en el arreglo que contendra todas\n",
         "\n",
+        "  #print(all_cities)\n",
         "  distances = []\n",
         "  for i in all_cities.values():\n",
         "    #print(i)\n",
         "    distances.append(i)\n",
         "\n",
+        "  \n",
         "  adj_distance = generate_adjacency_matrix(distances)\n",
         "  return (all_cities, adj_distance, N, Imax)"
       ],
-      "execution_count": 287,
+      "execution_count": 365,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bnqmgoi8J_g3"
+      },
+      "source": [
+        "#print(get_dictarr_cities_by_hand())"
+      ],
+      "execution_count": 366,
       "outputs": []
     },
     {
@@ -717,10 +730,10 @@
         "  # Generar solución inicial X0.\n",
         "  # El viajero siempre parte de n0\n",
         "  # De acuerdo a las consideraciones: La solucion inicial se genera utilizando un algoritmo voraz.\n",
-        "  #X0 = generate_solution(N) # aleatoria\n",
-        "  #X0 = generate_greedy_solution() # no generica\n",
+        "  #X0 = generate_solution(N) # aleatoria  #X0 = generate_greedy_solution() # no generica\n",
         "  X0 = generate_greedy_solution_adj_matrix(adj_matx) # generica\n",
-        "  print(f\"Solución inicial: {X0}, {f(X0, all_cities)}\")\n",
+        "  \n",
+        "  #print(f\"Solución inicial: {X0}, {f(X0, all_cities)}\")\n",
         "  \n",
         "  # Colocar el contador de iteraciones en 0: K <- 0\n",
         "  k = 0\n",
@@ -729,11 +742,16 @@
         "  tabu_time = floor(N/2)\n",
         "  tabu_list = [] # [\"0\",2] = [city, tabu_time]\n",
         "  \n",
+        "  # Para no estancar el algoritmo en 248\n",
+        "  possible_solutions, city_used = get_neighborhood(X)\n",
+        "  X = possible_solutions[0] \n",
+        "  tabu_list.append([city_used, tabu_time])\n",
+        "\n",
         "  while k <= Imax:\n",
         "    k += 1\n",
         "    # Determinar el vecindario N(x)\n",
-        "    possible_solutions, city_used = get_neighborhood(X0) \n",
-        "\n",
+        "    #possible_solutions, city_used = get_neighborhood(tmp_x)\n",
+        "    possible_solutions, city_used = get_neighborhood(X) \n",
         "    # Revisamos que la ciudad no este en la lista tabu\n",
         "    status = check_tabu_list(city_used, tabu_list)\n",
         "    if status == False: \n",
@@ -741,22 +759,20 @@
         "    elif status == True: \n",
         "      possible_solutions = [] # Para evitarel for que revisa las soluciones\n",
         "    \n",
-        "    \n",
         "    ## Determinar el conjunto de aspirantes A(X,K)\n",
         "    ## Determinar el vecindario reducido: N*(X) = {N(X) - T(X, K)} u A(X, K) \n",
-        "\n",
         "    # Escoger la mejor solución X entre las soluciones que estan en N*(X,K)\n",
         "    for ps in possible_solutions:\n",
         "      if f(ps, all_cities) < f(X, all_cities): #if f(x) < f(x*) \n",
         "          X = ps#X_start = X\n",
+        "          #tmp_x = X\n",
         "    \n",
         "    #actualizar la lista tabú L(X,K)\n",
-        "    #print(tabu_list)\n",
         "    tabu_list = update_tabu_list(tabu_list)\n",
         "\n",
         "  return (X, f(X, all_cities))"
       ],
-      "execution_count": 291,
+      "execution_count": 423,
       "outputs": []
     },
     {
@@ -775,7 +791,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4eCpXORoSCD",
-        "outputId": "a3538076-55a0-4006-bcb8-3592583de4c1"
+        "outputId": "650ba286-6150-415e-b322-9f09a7d86fe9"
       },
       "source": [
         "if __name__ == \"__main__\":\n",
@@ -786,15 +802,54 @@
         "    # dict city:[distances], adjacency matrix, num cities, num iterations \n",
         "    my_cities, adj_mat, N, Imax = get_dictarr_cities_by_hand()\n",
         "    #print(my_cities,'\\n', adj_mat, '\\n', N, '\\n', Imax)\n",
+        "    #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")\n",
+        "    \n",
         "  elif type_input == 2:\n",
         "    file_name = str(input(\"Nombre del archivo: \"))\n",
+        "    M = int(input(\"Número de ejecuciones: \"))\n",
         "    # dict city:[distances], adjacency matrix, num cities, num iterations \n",
         "    my_cities, adj_mat, N, Imax = get_dictarr_cities_by_textfile(file_name)\n",
         "    #print(my_cities,'\\n', adj_mat, '\\n', N, '\\n', Imax)\n",
+        "    #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")\n",
+        "    # ------------------------------------------PARTE 2\n",
+        "    #1. Mejor soluci ́on encontrada considerando las M ejecuciones.\n",
+        "    #2. Peor soluci ́on encontrada considerando las M ejecuciones.\n",
+        "    #3. Soluci ́on que corresponde a la mediana considerando las M ejecuciones.\n",
+        "    #4. Media del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
+        "    #5. Desviaci ́on est ́andar del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
+        "    solutions = []\n",
+        "    #better_way = \"\"; better_weight = 100000\n",
+        "    #poor_way = \"\"; poor_weight = 0\n",
+        "    media = 0\n",
+        "    stdesv = []\n",
+        "    tmp = 0\n",
+        "    while tmp != M:\n",
+        "      way, weight = tabu_search(Imax, N, my_cities, adj_mat)\n",
+        "      element = (way, weight)\n",
+        "      media += weight\n",
+        "      stdesv.append(weight)\n",
+        "      #if element[1] < better_weight:\n",
+        "        #better_weight = element[1]\n",
+        "        #better_way = element[0]\n",
+        "      #if element[1] > poor_weight:\n",
+        "        #poor_weight = element[1]\n",
+        "        #poor_way = element[0]\n",
         "\n",
-        "  print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")"
+        "\n",
+        "      solutions.append(element)\n",
+        "      tmp += 1\n",
+        "    \n",
+        "    print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
+        "    print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
+        "    print(f\"Mediana ejecuciones: {solutions[int(len(solutions)/2)]}\")\n",
+        "    print(f\"Media: {media/len(solutions)}\")\n",
+        "    print(f\"Desviación estandar: {np.std(stdesv)}\")\n",
+        "  \n",
+        "  else:\n",
+        "    print(\"Opción no valida\")\n",
+        "  #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")"
       ],
-      "execution_count": 289,
+      "execution_count": 425,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,12 +859,27 @@
             "2. Input desde archivo de texto\n",
             "2\n",
             "Nombre del archivo: input.txt\n",
-            "Solución inicial: ['0', '5', '3', '8', '9', '6', '2', '7', '1', '4', '0'], 271\n",
-            "->Búsqueda tabú: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n"
+            "Número de ejecuciones: 1000\n",
+            "Mejor solución: (['0', '1', '4', '7', '2', '6', '9', '8', '3', '5', '0'], 248) \n",
+            "Peor solución: (['0', '9', '8', '4', '3', '6', '2', '7', '1', '5', '0'], 332)\n",
+            "Mediana ejecuciones: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
+            "Media: 261.113\n",
+            "Desviación estandar: 24.033523066749908\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PPZsAKTwl2Vk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 422,
+      "outputs": []
     }
   ]
 }
